ensured page content covers the entire viewport
thus even for brief articles, we can reduce distractions by scrolling
the header out of view - plus `<html>`'s background color doesn't appear
as an awkward pseudo-footer

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -39,6 +39,7 @@ main {
 	--_spacing-right: calc(var(--spacing-outdent-right) + var(--_offset));
 
 	max-width: calc(var(--h-size) + var(--_spacing-left) + var(--_spacing-right));
+	min-height: 100vh;
 	margin-inline: auto;
 	padding-left: var(--_spacing-left);
 	padding-right: var(--_spacing-right);
@@ -56,8 +57,7 @@ a:visited {
 
 .stack > * {
 	display: block;
-	margin-top: 0;
-	margin-bottom: 0;
+	margin-block: 0;
 }
 .stack > * + * {
 	margin-top: var(--spacing);
